<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="celsius_sign" translatable="false">°C</string>
    <string name="fahrenheit_sign" translatable="false">°F</string>

    <string name="app_name">Weather forecast</string>

    <string name="today">Today</string>
    <string name="forecast">Forecast</string>
    <string name="settings">Settings</string>
    <string name="next_10_days_text">Next 10 days</string>
    <string name="current_weather_text">Current weather</string>
    <string name="future_weather_text">Future weather</string>

    <string name="loading_text">Loading</string>
    <string name="feels_like_text">Feels like</string>

    <string name="wind_text">Wind</string>
    <string name="precipitation_text">Precipitation</string>
    <string name="visibility_text">Visibility</string>

    <string name="kilometers_abbreviation_text">km</string>
    <string name="kilometers_per_hour_abbreviation_text">kph</string>
    <string name="millimeters_abbreviation_text">mm</string>

    <string name="miles_abbreviation_text">mi</string>
    <string name="miles_per_hour_abbreviation_text">mph</string>
    <string name="inch_abbreviation_text">in</string>

    <string name="weather_location_text">Weather Location</string>
    <string name="localization_text">Localization</string>
    <string name="units_text">Units</string>
    <string name="use_device_location_summary_text">Allow the app to get your location</string>
    <string name="use_device_location_text">Use device location</string>
    <string name="location_text">Location</string>
    <string name="location_summary_text">The location for which the weather is displayed</string>
    <string name="language_text">Language</string>
    <string name="unit_system_text">Unit system</string>

    <string name="metric_unit_system_text">Metric</string>
    <string name="imperial_unit_system_text">Imperial</string>

    <string name="system_language_text">System</string>
    <string name="english_language_text">English</string>
    <string name="russian_language_text">Russian</string>
    <string name="location_permission_toast_text">Please, set location manually in settings</string>

    <string name="warning_about_the_need_to_restart_app_text">You need to restart the app</string>

    <string name="personalization_text">Personalization</string>
    <string name="dark_theme_text">Dark theme</string>

</resources>
