<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/weather_location_text">
        <SwitchPreference
            android:defaultValue="true"
            android:disableDependentsState="true"
            android:key="USE_DEVICE_LOCATION"
            android:summary="@string/use_device_location_summary_text"
            android:title="@string/use_device_location_text" />
        <!--TODO Москва == Мексика ...-->
        <EditTextPreference
            android:defaultValue="Moscow"
            android:dependency="USE_DEVICE_LOCATION"
            android:key="CUSTOM_LOCATION"
            android:summary="@string/location_summary_text"
            android:title="@string/location_text" />
    </PreferenceCategory>
    <PreferenceCategory
        android:summary="@string/warning_about_the_need_to_restart_app_text"
        android:title="@string/localization_text">
        <ListPreference
            android:defaultValue="SYSTEM"
            android:entries="@array/languageEntries"
            android:entryValues="@array/languageValues"
            android:key="LANGUAGE"
            android:summary="%s"
            android:title="@string/language_text" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/units_text">
        <ListPreference
            android:defaultValue="METRIC"
            android:entries="@array/unitSystemEntries"
            android:entryValues="@array/unitSystemValues"
            android:key="UNIT_SYSTEM"
            android:summary="%s"
            android:title="@string/unit_system_text" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/personalization_text">
        <SwitchPreference
            android:defaultValue="false"
            android:key="DARK_THEME"
            android:title="@string/dark_theme_text" />
    </PreferenceCategory>
</PreferenceScreen>